compiler/kernc_cli/tests/soundness/reject/projection/self_recursive_associated_projection_cycle.kn
// class: projection-cycle
// stderr: recursive associated type projection cycle detected
// stderr: projection cycle: X.Loop.Out -> X.Loop.Out

trait Loop {
    type Out;
};

struct X {};

impl X: Loop {
    type Out = X.Loop.Out;
}

fn project(value: X) X.Loop.Out {
    _ = value;
    return X.{};
}

fn main() i32 {
    _ = project(X.{});
    return 0;
}
